# sem7labs

./: .gitignore  README.md
cg/: cg.sln
cg-f/: CMakeLists.txt
cg-f/src/01/: main.cpp
cg-f/src/02/: main.cpp
cg-f/src/03/: main.cpp
cg-f/src/04/: main.cpp
cg-f/src/05/: main.cpp
cg-f/src/06/: main.cpp
cg-f/src/07/: main.cpp
cg-f/src/08/: main.cpp
cg-f/src/09/: main.cpp
cg-f/src/10/: main.cpp
cg-f/src/11/: main.cpp
cg-f/src/12/: main.cpp
cg-self/: CMakeLists.txt
cg-self/src/01/: main.cpp
cg-self/src/02/: main.cpp
cg-self/src/03/: main.cpp
cg-self/src/04/: main.cpp
cg-self/src/05/: main.cpp
cg-self/src/06/: main.cpp
cg-self/src/07/: alternate.cpp
cg-self/src/08/: main.cpp
cg-self/src/09/: main.cpp
cg-self/src/10/: main.cpp
cg-self/src/11/: main.cpp
cg-self/src/12/: main.cpp
cg/00-try/cg/: Source.cpp  cg.vcxproj
cg/00-try/sierpinski-2d/: Source.cpp
cg/01-basic/: 01-basic.vcxproj
cg/10-sierpinski-2d/: .gitignore
cg/10-sierpinski-2d/cg/: Source.cpp
cg/11-sierpinski-3d/: cg.sln
cg/11-sierpinski-3d/cg/: Source.cpp
cg/11-sierpinski-3d/sierpinski-2d/: sierpinski-2d.vcxproj
cg/cg/: Source.cpp  cg.vcxproj
cg/cg/x64/Debug/: 00-try.exe.recipe  00-try.ilk  cg.exe.recipe  cg.ilk  vc142.idb
cg/cg/x64/Debug/00-try.tlog/: 00-try.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cg/cg/x64/Debug/cg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
padp/: CMakeLists.txt  README.md
padp-f/: CMakeLists.txt  README.md
padp-f/src/10/: main.cpp
padp-f/src/11/: main.cpp
padp-f/src/20/: main.cpp
padp-f/src/30/: main.cpp  old.cpp  results.md
padp-f/src/40/: grayscale.cpp
padp-f/src/50/: main.c
padp-f/src/60/: main.cpp
padp-f/src/70/: main copy.cpp  main.cpp  ocl.cpp  oclsimpler.cpp
padp/src/00/: main.cpp  reductionism.cpp
padp/src/10/: area.cpp  areameasure.cpp  areampi.c  results.md
padp/src/20/: main.cpp
padp/src/30/: cfe.cpp  main.cpp
padp/src/40/: cfe.cpp  cnfe.cpp
padp/src/60/: main.cpp
padp/src/70/: ocl.cpp  oclsimpler.cpp  output.txt  test.cpp
